fixed a little spelling, changed some color stuff around, added social media icons to collapsable menu

--- a/css/sidenav.css
+++ b/css/sidenav.css
@@ -15,17 +15,12 @@
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 8px 8px 8px 32px;
+  padding: 8px 8px 8px 8px;
   text-decoration: none;
   font-size: 20px;
   display: block;
   transition: 0.3s;
 }
-
-/* When you mouse over the navigation links, change their color */
-/* .sidenav a:hover { */
-  /* color: #f1f1f1; */
-/* } */
 
 .closebtn {
     color: lightgrey;
